# cmakeLearn

./: Readme.txt
Project/source/base/1. hello_cmake/: CMakeLists.txt  main.cpp
Project/source/base/1. hello_cmake/src/: CMakeLists.txt  top.cpp
Project/source/base/2. hello_library/: CMakeLists.txt  main.cpp
Project/source/base/2. hello_library/dll/: func.cpp
Project/source/base/2. hello_library/include/: func.h  top.h
Project/source/base/2. hello_library/ndll/: func.cpp
Project/source/base/2. hello_library/src/: top.cpp
Project/source/base/3. hello_install/: CMakeLists.txt  main.cpp
Project/source/base/3. hello_install/include/: top.h
Project/source/base/3. hello_install/src/: top.cpp
Project/source/base/4.hello_newWorld/code/: CMakeLists.txt
Project/source/base/4.hello_newWorld/code/include/: top.h
Project/source/base/4.hello_newWorld/code/main/: CMakeLists.txt  main.cpp
Project/source/base/4.hello_newWorld/code/source/: CMakeLists.txt  top.cpp
Project/source/base/4.hello_newWorld/code/temp/: CMakeCache.txt  Makefile  cmake_install.cmake
Project/source/base/4.hello_newWorld/code/temp/main/: Makefile  cmake_install.cmake
Project/source/base/4.hello_newWorld/code/temp/source/: Makefile  cmake_install.cmake
Project/source/base/hello_cmake/: CMakeLists.txt  main.cpp
Project/source/base/hello_cmake/include/: top.h
